sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:44: error: Unmatched closing brace '}' ignored here
}
^